completed the extract_words_from_url function

--- a/M1_Webscraping.ipynb
+++ b/M1_Webscraping.ipynb
@@ -85,23 +85,40 @@
     "        # Create a session object to persist settings across requests\n",
     "        session = requests.Session()\n",
     "\n",
-    "        # TODO: Add retry logic to handle server errors (Hint: Use the Retry and HTTPAdapter classes)\n",
+    "        #Retry logic to handle server errors\n",
+    "        retries = Retry(\n",
+    "            total = 5, \n",
+    "            backoff_factor = 1,\n",
+    "            status_forcelist = [500, 502, 503, 504] #accomodates for various error codes\n",
+    "        )\n",
     "\n",
-    "        # TODO: Set up headers to mimic a browser (Hint: User-Agent and Accept headers)\n",
+    "        #Retry adapter classes\n",
+    "        session.mount('http://', HTTPAdapter(max_retries=retries))\n",
+    "        session.mount('https://', HTTPAdapter(max_retries=retries))\n",
     "\n",
-    "        # Make the request to the URL (Hint: use session.get)\n",
-    "        response = None  # <--- Replace with your request code\n",
-    "        # Make sure to raise an exception for any bad response\n",
-    "        # response.raise_for_status()\n",
+    "        #Mimic Browser Headers  \n",
+    "        headers = {\n",
+    "            'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+    "            'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8'\n",
+    "        }\n",
+    "\n",
+    "        #Request to the URL using session.get\n",
+    "        response = session.get(url, headers=headers)\n",
+    "        response.raise_for_status()\n",
     "\n",
     "        # Parse the HTML content using BeautifulSoup\n",
-    "        soup = None  # <--- Replace with BeautifulSoup parsing code\n",
+    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
     "\n",
     "        # Initialize an empty list to store extracted words\n",
     "        words = []\n",
     "\n",
-    "        # TODO: Find all <span> elements with a specific class (Hint: use soup.find_all)\n",
-    "        # and extract keywords from <a> tags inside those spans\n",
+    "        #Use .find_all to locate all <span> and <a> tags and extract keywords. \n",
+    "\n",
+    "        span_search = soup.find_all('span', class_='class_name')\n",
+    "        for span in span_search: \n",
+    "            link = span.find_all('a')\n",
+    "            for link in links: \n",
+    "                words.append(link.get_text().strip()) #Find all span elements with a specific class\n",
     "\n",
     "        # Return the first 5 words or fewer if less\n",
     "        return words[:5]\n",
@@ -111,7 +128,7 @@
     "        return [\"\"] * 5  # Return a list of 5 empty strings if an error occurs\n",
     "\n",
     "    finally:\n",
-    "        time.sleep(0)\n",
+    "        time.sleep(1) #added a delay based on code seen to avoid overwhelming the server\n",
     "\n",
     "def scrape_urls_from_csv(input_csv, output_csv):\n",
     "    # Open the input CSV for reading and the output CSV for writing\n",
