Added specific columns to webscrape from Yelp, and export to CSV

--- a/M1_Webscraping.ipynb
+++ b/M1_Webscraping.ipynb
@@ -67,7 +67,90 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing URL: https://www.yelp.com/biz/torchys-tacos-fayetteville-2\n",
+      "Error scraping https://www.yelp.com/biz/torchys-tacos-fayetteville-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/torchys-tacos-fayetteville-2\n",
+      "Processing URL: https://www.yelp.com/biz/charlies-bakery-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/charlies-bakery-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/charlies-bakery-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/haute-quarter-grill-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/club-paris-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/f-street-station-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/great-harvest-bread-anchorage-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/anchorage-museum-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/ginger-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/tommys-burger-stop-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/orso-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/pho-lena-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/pedros-mexican-grill-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/pedros-mexican-grill-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/pedros-mexican-grill-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/napolis-pizza-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/napolis-pizza-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/napolis-pizza-and-philly-s-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/dami-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/pho-vietnam-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/bear-tooth-grill-anchorage-2\n",
+      "Error scraping https://www.yelp.com/biz/bear-tooth-grill-anchorage-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/bear-tooth-grill-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/evas-cupcakery-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/bombay-deluxe-indian-restaurant-anchorage-2\n",
+      "Error scraping https://www.yelp.com/biz/bombay-deluxe-indian-restaurant-anchorage-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/bombay-deluxe-indian-restaurant-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/twin-dragon-mongolian-bar-b-q-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/fletchers-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/serranos-mexican-grill-anchorage-3\n",
+      "Processing URL: https://www.yelp.com/biz/mythai-downtown-restaurant-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/sushi-ya-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/tempura-express-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/zorbas-gyros-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/matanuska-brewing-midtown-anchorage-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/alaskas-gourmet-subs-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/taco-king-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/top-bop-muldoon-anchorage-6\n",
+      "Error scraping https://www.yelp.com/biz/top-bop-muldoon-anchorage-6: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/top-bop-muldoon-anchorage-6\n",
+      "Processing URL: https://www.yelp.com/biz/quantum-laundry-lounge-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/wild-scoops-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/wild-scoops-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/wild-scoops-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/yak-and-yeti-himalayan-restaurant-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/yak-and-yeti-himalayan-restaurant-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/yak-and-yeti-himalayan-restaurant-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/lei-s-poke-stop-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/fromagios-artisan-cheese-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/burgerfi-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/university-lake-dog-park-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/university-lake-dog-park-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/university-lake-dog-park-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/peanut-farm-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/alaska-cake-studio-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/red-umbrella-reindeer-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/pho-lena-downtown-anchorage-3\n",
+      "Processing URL: https://www.yelp.com/biz/hacienda-mexican-restaurant-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/kami-ramen-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/organic-oasis-restaurant-and-juice-bar-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/yamaya-seafood-restaurant-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/pho-vietnam-4-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/straight-out-of-philly-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/straight-out-of-philly-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/straight-out-of-philly-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/oscars-taco-grande-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/kavas-pancake-house-anchorage-2\n",
+      "Error scraping https://www.yelp.com/biz/kavas-pancake-house-anchorage-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/kavas-pancake-house-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/top-bop-midtown-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/zip-kombucha-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/el-jefe-taco-joint-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/el-jefe-taco-joint-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/el-jefe-taco-joint-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/urban-greens-subs-and-salads-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/rice-garden-anchorage-anchorage-2\n",
+      "Processing URL: https://www.yelp.com/biz/taco-king-anchorage-9\n",
+      "Error scraping https://www.yelp.com/biz/taco-king-anchorage-9: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/taco-king-anchorage-9\n",
+      "Processing URL: https://www.yelp.com/biz/indigo-tea-lounge-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/thai-delight-restaurant-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/summit-spice-and-tea-anchorage-5\n",
+      "Processing URL: https://www.yelp.com/biz/uncle-joes-pizzeria-downtown-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/uncle-joes-pizzeria-downtown-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/uncle-joes-pizzeria-downtown-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/preference-anchorage\n",
+      "Error scraping https://www.yelp.com/biz/preference-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/preference-anchorage\n",
+      "Processing URL: https://www.yelp.com/biz/eastern-european-store-and-deli-anchorage\n"
+     ]
+    }
+   ],
    "source": [
     "# Incomplete Scraper Script for Students\n",
     "\n",
@@ -89,7 +172,7 @@
     "        retries = Retry(\n",
     "            total = 5, \n",
     "            backoff_factor = 1,\n",
-    "            status_forcelist = [500, 502, 503, 504] #accomodates for various error codes\n",
+    "            status_forcelist = [500, 502, 503, 504] #allow for various error codes\n",
     "        )\n",
     "\n",
     "        #Retry adapter classes\n",
@@ -109,75 +192,107 @@
     "        # Parse the HTML content using BeautifulSoup\n",
     "        soup = BeautifulSoup(response.content, 'html.parser')\n",
     "\n",
-    "        # Initialize an empty list to store extracted words\n",
-    "        words = []\n",
+    "        # Initialize dictionary for extracted data\n",
+    "        data = {\n",
+    "            'Business Name': '',\n",
+    "            'Review Rating': '',\n",
+    "            'Number of Reviews': '',\n",
+    "            'Food Type': '',\n",
+    "            'Operational Hours': ''\n",
+    "        }\n",
     "\n",
-    "        #Use .find_all to locate all <span> and <a> tags and extract keywords. \n",
+    "        # Extract business name\n",
+    "        name_tag = soup.find('h1', class_='y-css-olzveb')\n",
+    "        if name_tag:\n",
+    "            data['Business Name'] = name_tag.text.strip()\n",
     "\n",
-    "        span_search = soup.find_all('span', class_='class_name')\n",
-    "        for span in span_search: \n",
-    "            link = span.find_all('a')\n",
-    "            for link in links: \n",
-    "                words.append(link.get_text().strip()) #Find all span elements with a specific class\n",
+    "        # Extract review score and count\n",
+    "        review_div = soup.find('div', {'data-testid': 'BizHeaderReviewCount'})\n",
+    "        if review_div:\n",
+    "            rating = review_div.find('span', class_='y-css-1jz061g')\n",
+    "            reviews = review_div.find('a', class_='y-css-1x1e1r2')\n",
+    "            if rating:\n",
+    "                data['Review Rating'] = rating.text.strip()\n",
+    "            if reviews:\n",
+    "                data['Number of Reviews'] = reviews.text.strip('()')\n",
     "\n",
-    "        # Return the first 5 words or fewer if less\n",
-    "        return words[:5]\n",
+    "        # Extract food/restaurant type\n",
+    "        food_type = soup.find('a', class_='y-css-1x1e1r2')\n",
+    "        if food_type:\n",
+    "            data['Food Type'] = food_type.text.strip()\n",
+    "\n",
+    "        # Extract operational hours\n",
+    "        hours = soup.find('span', {'data-font-weight': 'semibold', 'class': 'y-css-1jz061g'})\n",
+    "        if hours:\n",
+    "            data['Operational Hours'] = hours.text.strip()\n",
+    "\n",
+    "        return list(data.values())\n",
     "\n",
     "    except RequestException as e:\n",
-    "        print(f\"Error scraping {url}: {e}\")  # Log the error message\n",
-    "        return [\"\"] * 5  # Return a list of 5 empty strings if an error occurs\n",
+    "        print(f\"Error scraping {url}: {e}\")\n",
+    "        return [\"\"] * 5\n",
     "\n",
     "    finally:\n",
     "        time.sleep(1) #added a delay based on code seen to avoid overwhelming the server\n",
     "\n",
     "def scrape_urls_from_csv(input_csv, output_csv):\n",
-    "    # Open the input CSV for reading and the output CSV for writing\n",
+    "    # # Testing the web scraper with a single URL (to avoid getting IP blocked again LOL)\n",
+    "    # test_url = \"https://www.yelp.com/biz/torchys-tacos-fayetteville-2\"\n",
+    "    # extracted_data = extract_words_from_url(test_url)\n",
+    "    # print(\"Test Results:\")\n",
+    "    # print(\"Business Name:\", extracted_data[0])\n",
+    "    # print(\"Review Rating:\", extracted_data[1])\n",
+    "    # print(\"Number of Reviews:\", extracted_data[2])\n",
+    "    # print(\"Food Type:\", extracted_data[3])\n",
+    "    # print(\"Operational Hours:\", extracted_data[4])\n",
+    "\n",
     "    with open(input_csv, mode='r', newline='', encoding='utf-8') as infile, \\\n",
-    "         open(output_csv, mode='w', newline='', encoding='utf-8') as outfile:\n",
-    "\n",
-    "        # TODO: Use csv.DictReader to read the CSV file and get a list of dictionaries, \n",
-    "        # where each row is represented as a dictionary with column headers as keys.\n",
-    "        \n",
-    "        \n",
-    "        # Get the fieldnames (i.e., the column headers from the input CSV)\n",
-    "        fieldnames = reader.fieldnames\n",
-    "\n",
-    "        # TODO: Use csv.DictWriter to write rows into the output CSV file, \n",
-    "        # making sure to include the same fieldnames as the input CSV.\n",
+    "            open(output_csv, mode='w', newline='', encoding='utf-8') as outfile:\n",
     "        \n",
     "\n",
-    "        # Write the headers (column names) into the output CSV file\n",
+    "    # CSV Reader initialization\n",
+    "        reader = csv.DictReader(infile)\n",
+    "\n",
+    "        # Fieldnames for the output CSV\n",
+    "        fieldnames = reader.fieldnames + [\n",
+    "            'Business Name',\n",
+    "            'Review Rating',\n",
+    "            'Number of Reviews',\n",
+    "            'Food Type',\n",
+    "            'Operational Hours'\n",
+    "        ]\n",
+    "\n",
+    "        # CSV Writer initialization\n",
+    "        writer = csv.DictWriter(outfile, fieldnames=fieldnames) \n",
     "        writer.writeheader()\n",
     "\n",
-    "        # Iterate over each row in the input CSV\n",
+    "        # Process each row\n",
     "        for row in reader:\n",
-    "            # TODO: Extract the URL from the 'restaurant_url' column in the CSV.\n",
+    "            url = row.get('restaurant_url')\n",
     "            \n",
-    "            # If the URL is missing, skip the row and print a message\n",
     "            if not url:\n",
     "                print(f\"Skipping row with missing URL: {row}\")\n",
     "                continue\n",
     "\n",
-    "            # Print the URL being processed for debugging purposes\n",
     "            print(f\"Processing URL: {url}\")\n",
-    "\n",
-    "            # TODO: Call the extract_words_from_url function to get a list of words\n",
     "            \n",
-    "\n",
-    "            # TODO: For each word in the extracted list, assign it to a new column (e.g., 'Label 1', 'Label 2', etc.)\n",
-    "            # Ensure the columns are named 'Label 1', 'Label 2', etc., and each word is assigned to the correct column.\n",
+    "            # Extract business data\n",
+    "            extracted_data = extract_words_from_url(url)\n",
     "            \n",
-    "\n",
-    "            # Write the updated row into the output CSV\n",
+    "            # Add business data to row\n",
+    "            row['Business Name'] = extracted_data[0]\n",
+    "            row['Review Rating'] = extracted_data[1]\n",
+    "            row['Number of Reviews'] = extracted_data[2]\n",
+    "            row['Food Type'] = extracted_data[3]\n",
+    "            row['Operational Hours'] = extracted_data[4]\n",
+    "            \n",
+    "            # Write row once\n",
     "            writer.writerow(row)\n",
-    "\n",
-    "            # TODO: Add a small delay between processing each URL to avoid overwhelming the server\n",
-    "            # Hint: A delay of 1 second could be more appropriate\n",
+    "            time.sleep(1)  # delay to avoid overloading server \n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    # TODO: Specify the input and output CSV file paths\n",
-    "\n",
-    "\n",
+    "    input_csv = \"/Users/hari/Documents/INSY 669/Module 1/INSY669_module_1/URLs to scrape.csv\"\n",
+    "    output_csv = \"/Users/hari/Documents/INSY 669/Module 1/INSY669_module_1/scraped_results.csv\"\n",
     "    # Call the main scraping function\n",
     "    scrape_urls_from_csv(input_csv, output_csv)\n"
    ]
@@ -209,8 +324,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
