Fixed the class for Food Type (was originally showing the same class as review count

--- a/M1_Webscraping.ipynb
+++ b/M1_Webscraping.ipynb
@@ -72,82 +72,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing URL: https://www.yelp.com/biz/torchys-tacos-fayetteville-2\n",
-      "Error scraping https://www.yelp.com/biz/torchys-tacos-fayetteville-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/torchys-tacos-fayetteville-2\n",
-      "Processing URL: https://www.yelp.com/biz/charlies-bakery-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/charlies-bakery-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/charlies-bakery-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/haute-quarter-grill-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/club-paris-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/f-street-station-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/great-harvest-bread-anchorage-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/anchorage-museum-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/ginger-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/tommys-burger-stop-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/orso-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/pho-lena-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/pedros-mexican-grill-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/pedros-mexican-grill-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/pedros-mexican-grill-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/napolis-pizza-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/napolis-pizza-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/napolis-pizza-and-philly-s-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/dami-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/pho-vietnam-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/bear-tooth-grill-anchorage-2\n",
-      "Error scraping https://www.yelp.com/biz/bear-tooth-grill-anchorage-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/bear-tooth-grill-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/evas-cupcakery-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/bombay-deluxe-indian-restaurant-anchorage-2\n",
-      "Error scraping https://www.yelp.com/biz/bombay-deluxe-indian-restaurant-anchorage-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/bombay-deluxe-indian-restaurant-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/twin-dragon-mongolian-bar-b-q-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/fletchers-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/serranos-mexican-grill-anchorage-3\n",
-      "Processing URL: https://www.yelp.com/biz/mythai-downtown-restaurant-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/sushi-ya-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/tempura-express-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/zorbas-gyros-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/matanuska-brewing-midtown-anchorage-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/alaskas-gourmet-subs-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/taco-king-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/top-bop-muldoon-anchorage-6\n",
-      "Error scraping https://www.yelp.com/biz/top-bop-muldoon-anchorage-6: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/top-bop-muldoon-anchorage-6\n",
-      "Processing URL: https://www.yelp.com/biz/quantum-laundry-lounge-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/wild-scoops-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/wild-scoops-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/wild-scoops-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/yak-and-yeti-himalayan-restaurant-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/yak-and-yeti-himalayan-restaurant-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/yak-and-yeti-himalayan-restaurant-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/lei-s-poke-stop-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/fromagios-artisan-cheese-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/burgerfi-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/university-lake-dog-park-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/university-lake-dog-park-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/university-lake-dog-park-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/peanut-farm-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/alaska-cake-studio-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/red-umbrella-reindeer-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/pho-lena-downtown-anchorage-3\n",
-      "Processing URL: https://www.yelp.com/biz/hacienda-mexican-restaurant-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/kami-ramen-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/organic-oasis-restaurant-and-juice-bar-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/yamaya-seafood-restaurant-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/pho-vietnam-4-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/straight-out-of-philly-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/straight-out-of-philly-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/straight-out-of-philly-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/oscars-taco-grande-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/kavas-pancake-house-anchorage-2\n",
-      "Error scraping https://www.yelp.com/biz/kavas-pancake-house-anchorage-2: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/kavas-pancake-house-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/top-bop-midtown-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/zip-kombucha-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/el-jefe-taco-joint-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/el-jefe-taco-joint-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/el-jefe-taco-joint-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/urban-greens-subs-and-salads-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/rice-garden-anchorage-anchorage-2\n",
-      "Processing URL: https://www.yelp.com/biz/taco-king-anchorage-9\n",
-      "Error scraping https://www.yelp.com/biz/taco-king-anchorage-9: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/taco-king-anchorage-9\n",
-      "Processing URL: https://www.yelp.com/biz/indigo-tea-lounge-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/thai-delight-restaurant-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/summit-spice-and-tea-anchorage-5\n",
-      "Processing URL: https://www.yelp.com/biz/uncle-joes-pizzeria-downtown-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/uncle-joes-pizzeria-downtown-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/uncle-joes-pizzeria-downtown-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/preference-anchorage\n",
-      "Error scraping https://www.yelp.com/biz/preference-anchorage: 403 Client Error: Forbidden for url: https://www.yelp.com/biz/preference-anchorage\n",
-      "Processing URL: https://www.yelp.com/biz/eastern-european-store-and-deli-anchorage\n"
+      "Error scraping https://www.yelp.ca/biz/sushi-sama-montr%C3%A9al-11: 403 Client Error: Forbidden for url: https://www.yelp.ca/biz/sushi-sama-montr%C3%A9al-11\n",
+      "Test Results:\n",
+      "Business Name: \n",
+      "Review Rating: \n",
+      "Number of Reviews: \n",
+      "Food Type: \n",
+      "Operational Hours: \n"
      ]
     }
    ],
@@ -210,7 +141,7 @@
     "        review_div = soup.find('div', {'data-testid': 'BizHeaderReviewCount'})\n",
     "        if review_div:\n",
     "            rating = review_div.find('span', class_='y-css-1jz061g')\n",
-    "            reviews = review_div.find('a', class_='y-css-1x1e1r2')\n",
+    "            reviews = review_div.find('span', class_='y-css-1cafv3i')\n",
     "            if rating:\n",
     "                data['Review Rating'] = rating.text.strip()\n",
     "            if reviews:\n",
@@ -237,7 +168,7 @@
     "\n",
     "def scrape_urls_from_csv(input_csv, output_csv):\n",
     "    # # Testing the web scraper with a single URL (to avoid getting IP blocked again LOL)\n",
-    "    # test_url = \"https://www.yelp.com/biz/torchys-tacos-fayetteville-2\"\n",
+    "    # test_url = \"https://www.yelp.ca/biz/sushi-sama-montr%C3%A9al-11\"\n",
     "    # extracted_data = extract_words_from_url(test_url)\n",
     "    # print(\"Test Results:\")\n",
     "    # print(\"Business Name:\", extracted_data[0])\n",
